// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button test bordered button 1`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  box-sizing: border-box;
  border: 0.0625rem solid #4475E3;
  background-color: transparent;
}

.c0:hover {
  cursor: pointer;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  height: 100%;
  color: #4475E3;
}

.c0 > div svg {
  fill: #4475E3;
}

.c0:hover:enabled {
  background-color: #ECF1FC;
}

.c0:disabled {
  border: 0.0625rem solid #B3C6F1;
}

.c0:disabled > div {
  color: #B3C6F1;
}

.c0:disabled > div svg {
  fill: #B3C6F1;
}

.c0:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c1 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

<body>
  <div>
    <button
      class="c0"
      data-testid="bordered-button"
      fill="bordered"
      style="overflow: hidden; position: relative;"
    >
      <div
        class="c1"
        data-testid="content"
      >
        BUTTON
      </div>
      <div
        class="c2"
        color="primaryLightPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test bordered button 2`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  box-sizing: border-box;
  border: 0.0625rem solid #4475E3;
  background-color: transparent;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  height: 100%;
  color: #4475E3;
}

.c0 > div svg {
  fill: #4475E3;
}

.c0:hover:enabled {
  background-color: #ECF1FC;
}

.c0:disabled {
  border: 0.0625rem solid #B3C6F1;
}

.c0:disabled > div {
  color: #B3C6F1;
}

.c0:disabled > div svg {
  fill: #B3C6F1;
}

.c0:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c1 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

<body>
  <div>
    <button
      class="c0"
      data-testid="bordered-button"
      disabled=""
      fill="bordered"
      style="overflow: hidden; position: relative;"
    >
      <div
        class="c1"
        data-testid="content"
      >
        BUTTON
      </div>
      <div
        class="c2"
        color="primaryLightPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test bordered button 3`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c1 {
  fill: #4475E3;
  -webkit-animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
  animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  box-sizing: border-box;
  border: 0.0625rem solid #4475E3;
  background-color: transparent;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #4475E3;
}

.c0 > div svg {
  fill: #4475E3;
}

.c0:hover:enabled {
  background-color: #ECF1FC;
}

.c0:disabled {
  border: 0.0625rem solid #4475E3;
}

.c0:disabled > div {
  color: #B3C6F1;
}

.c0:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

<body>
  <div>
    <button
      class="c0"
      data-testid="bordered-button"
      disabled=""
      fill="bordered"
      style="overflow: hidden; position: relative;"
    >
      <svg
        class="c1"
        data-testid="spinner"
      />
      <div
        class="c2"
        color="primaryLightPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test solid button 1`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c0:hover {
  cursor: pointer;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #FFFFFF;
}

.c0 > div svg {
  fill: #FFFFFF;
}

.c0:hover:enabled {
  background-color: #2F65E0;
}

.c0:disabled {
  background-color: #B3C6F1;
}

.c0:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c1 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

<body>
  <div>
    <button
      class="c0"
      data-testid="solid-button"
      fill="solid"
      style="overflow: hidden; position: relative;"
    >
      <div
        class="c1"
        data-testid="content"
      >
        BUTTON
      </div>
      <div
        class="c2"
        color="primaryPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test solid button 2`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 400ms;
  transition-duration: 400ms;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #FFFFFF;
}

.c0 > div svg {
  fill: #FFFFFF;
}

.c0:hover:enabled {
  background-color: #2F65E0;
}

.c0:disabled {
  background-color: #B3C6F1;
}

.c0:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

.c1 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

<body>
  <div>
    <button
      class="c0"
      data-testid="solid-button"
      disabled=""
      fill="solid"
      style="overflow: hidden; position: relative;"
    >
      <div
        class="c1"
        data-testid="content"
      >
        BUTTON
      </div>
      <div
        class="c2"
        color="primaryPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test solid button 3`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  pointer-events: none;
}

.c1 {
  fill: #FFFFFF;
  -webkit-animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
  animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: #4475E3;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #FFFFFF;
}

.c0 > div svg {
  fill: #FFFFFF;
}

.c0:hover:enabled {
  background-color: #2F65E0;
}

.c0:disabled {
  background-color: #4475E3;
}

.c0:focus-visible:enabled {
  border: 0.125rem solid #FFFFFF;
  background-color: #4475E3;
  outline: 0.125rem solid #C7D6F7;
}

<body>
  <div>
    <button
      class="c0"
      data-testid="solid-button"
      disabled=""
      fill="solid"
      style="overflow: hidden; position: relative;"
    >
      <svg
        class="c1"
        data-testid="spinner"
      />
      <div
        class="c2"
        color="primaryPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test text button 1`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c0:hover {
  cursor: pointer;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #4475E3;
}

.c0 > div svg {
  fill: #4475E3;
}

.c0:hover:enabled > div {
  color: #2F65E0;
}

.c0:hover:enabled > div svg {
  fill: #2F65E0;
}

.c0:hover:enabled:active > div {
  color: #2057D5;
}

.c0:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c0:disabled > div {
  color: #B3C6F1;
}

.c0:disabled > div svg {
  fill: #B3C6F1;
}

.c0:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c0:focus-visible > div {
  color: #4475E3;
}

.c0:focus-visible > div svg {
  fill: #4475E3;
}

.c1 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

<body>
  <div>
    <button
      class="c0"
      data-testid="text-button"
      fill="text"
      style="overflow: hidden; position: relative;"
    >
      <div
        class="c1"
        data-testid="content"
      >
        BUTTON
      </div>
      <div
        class="c2"
        color="primaryLightPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test text button 2`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #4475E3;
}

.c0 > div svg {
  fill: #4475E3;
}

.c0:hover:enabled > div {
  color: #2F65E0;
}

.c0:hover:enabled > div svg {
  fill: #2F65E0;
}

.c0:hover:enabled:active > div {
  color: #2057D5;
}

.c0:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c0:disabled > div {
  color: #B3C6F1;
}

.c0:disabled > div svg {
  fill: #B3C6F1;
}

.c0:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c0:focus-visible > div {
  color: #4475E3;
}

.c0:focus-visible > div svg {
  fill: #4475E3;
}

.c1 {
  position: relative;
  z-index: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translate3d(0,0,0.0625rem);
  -ms-transform: translate3d(0,0,0.0625rem);
  transform: translate3d(0,0,0.0625rem);
}

<body>
  <div>
    <button
      class="c0"
      data-testid="text-button"
      disabled=""
      fill="text"
      style="overflow: hidden; position: relative;"
    >
      <div
        class="c1"
        data-testid="content"
      >
        BUTTON
      </div>
      <div
        class="c2"
        color="primaryLightPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;

exports[`Button test text button 3`] = `
.c2 {
  position: absolute;
  will-change: opacity,transform;
  border-radius: 50%;
  -webkit-animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  animation: bykygw 600ms cubic-bezier(0.4,0,0.2,1) forwards;
  z-index: 0;
  background-color: #E3EAFB;
  pointer-events: none;
}

.c1 {
  fill: #4475E3;
  -webkit-animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
  animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
}

.c0 {
  position: relative;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.25rem;
  width: 100%;
  white-space: nowrap;
  padding: 0;
  overflow: hidden;
  -webkit-transition-duration: 0;
  transition-duration: 0;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  height: 3rem;
  border: none;
  background-color: transparent;
}

.c0 > div {
  font-family: Inter,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 600;
  font-style: normal;
}

.c0 > div svg {
  margin-right: 0.25rem;
}

.c0 > div {
  color: #4475E3;
}

.c0 > div svg {
  fill: #4475E3;
}

.c0:hover:enabled > div {
  color: #2F65E0;
}

.c0:hover:enabled > div svg {
  fill: #2F65E0;
}

.c0:hover:enabled:active > div {
  color: #2057D5;
}

.c0:hover:enabled:active > div svg {
  fill: #2057D5;
}

.c0:disabled > div {
  color: #B3C6F1;
}

.c0:disabled > div svg {
  fill: #B3C6F1;
}

.c0:focus-visible {
  outline: 0.125rem solid #C7D6F7;
}

.c0:focus-visible > div {
  color: #4475E3;
}

.c0:focus-visible > div svg {
  fill: #4475E3;
}

<body>
  <div>
    <button
      class="c0"
      data-testid="text-button"
      disabled=""
      fill="text"
      style="overflow: hidden; position: relative;"
    >
      <svg
        class="c1"
        data-testid="spinner"
      />
      <div
        class="c2"
        color="primaryLightPressed"
        opacity="1,1"
        scale="0"
        style="display: none; width: 0rem; height: 0rem; top: 0rem; left: 0rem;"
      />
    </button>
  </div>
</body>
`;
